--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Project Specific
+data/
+deps.*
+masterfilelist.txt
+lastupdate.txt
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -8,7 +15,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
+buildf
 develop-eggs/
 dist/
 downloads/
